Revision history for Perl extension DTL::Fast.

1.618 - In development (branch)
    - Changed context variable traversing: context is not being passed to the code references or object methods anymore, fixes #69, thanks @cblake777

1.617 - Sun 29 Mar 2015
    - Implemented DTL::Fast::count_lines function in C, counts newline symbols in the string
    - Implemented proper lines counting for multi-line syntax constructions, fixes #64
    - for tag now dies with pretty message on duplicate empty tag
    - Uknown filter and tag now shows error environment, fixes #63
    - Undefined time value in date filter treated as 0, fixes #61
    - Implemented dump, dump_html and dump_warn tags for dumping context variables in different ways, fixes #68
    - warn tag removed in favor of dump_warn
    - Added variable name validation and restrictions, fixes #62

1.616 - Sun 22 Mar 2015
    - Updated Escape::XS version requirement to 0.12

1.615 - Sat 21 Mar 2015
    - Improved error message on undisclosed/unknown tags, with source line numbers support
    - Reverted Escape::XS mapping, not working on windows (no idea why)

1.613 - Sat 21 Feb 2015 14:15 MSK
    - implemented html_protect in C, test performance increased 17%, fixes #32
    - internal context access optimisation, total performance increase 30%
    - variable context access optimisation for simple variables, total increase 36%
    - shortcuted escape/unescape functions to URI::Escape::XS
    - DTL::Fast::Utils::as_bool method now works without additional functions calls
    - Implemented and documented eval_sequence method
    - Documented custom tags creation, fixes #12
    - Documented custom filters creation, fixes #13

1.612 - Sun 15 Feb 2015 18:40 MSK
    - Fixed timeuntil test race condition, thanks to @eserte, fixes #59
    - Implemented dynamic inheritance. You may now extend with context, fixes #9
    - Redundant serialized cache removed from templating system. Only runtime and custom now.